testdata/baselines/reference/submodule/compiler/moduleResolution_explicitNodeModulesImport_implicitAny.errors.txt
/node_modules/foo/index.js(1,1): error TS2304: Cannot find name 'exports'.
/src/index.ts(1,10): error TS2305: Module '"/node_modules/foo/index"' has no exported member 'y'.


==== /src/index.ts (1 errors) ====
    import { y } from "../node_modules/foo";
             ~
!!! error TS2305: Module '"/node_modules/foo/index"' has no exported member 'y'.
    
==== /node_modules/foo/index.js (1 errors) ====
    exports.x = 0;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    